--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.16.0",
+    "antd-button-color": "^1.0.4",
     "canvas": "^2.7.0",
     "cors": "^2.8.5",
+    "jimp": "^0.16.1",
     "next-redux-wrapper": "^6.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
