--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@babel/plugin-syntax-jsx": "^7.12.13",
     "@tensorflow/tfjs": "^3.6.0",
     "@tensorflow/tfjs-converter": "^3.6.0",
