--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.0",
     "antd-button-color": "^1.0.4",
+    "axios": "^0.22.0",
     "canvas": "^2.7.0",
     "cors": "^2.8.5",
     "next-redux-wrapper": "^6.0.2",
@@ -20,6 +21,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.1.1"
   },
