--- a/front/package.json
+++ b/front/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy": "http://localhost:8080",
   "name": "x-ray-classifier",
   "version": "0.1.0",
   "private": true,
@@ -13,8 +14,10 @@
     "antd": "^4.16.0",
     "antd-button-color": "^1.0.4",
     "axios": "^0.22.0",
+    "blueimp-canvas-to-blob": "^3.29.0",
     "canvas": "^2.7.0",
     "cors": "^2.8.5",
+    "multer": "^1.4.3",
     "next-redux-wrapper": "^6.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
