--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
